--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
   letter-spacing: 3px;
   text-align: center;
   /* Les tailles de polices doivent être en REM  */
-  font-size: 2.5rem;
+  font-size: 8vw;
   text-shadow: 3px 3px 8px #00000042;
   color: #ab0ef4;
   font-family: "Oswald", sans-serif;
@@ -33,7 +33,7 @@ h1 {
 }
 
 main {
-  min-height: 500px;
+  min-height: 1035px;
   width: 90%;
   background: rgba(255, 255, 255, 0.658);
   /* Centrer une boite  */
@@ -50,7 +50,7 @@ h2 {
 
 .flexbox,
 .grid,
-absolute {
+.absolute {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,6 +60,7 @@ absolute {
   border-radius: 10px;
   padding: 10px;
   margin-top: 20px;
+  min-height: 150px;
 }
 
 /* FLEXBOX */
@@ -90,7 +91,8 @@ absolute {
 
 .grid img {
   width: 80%;
-  margin-top: 20px auto;
+  margin: 20px auto;
+  display: block;
 }
 
 form {
@@ -123,7 +125,7 @@ textarea {
   grid-area: bt;
   cursor: pointer;
   background: cyan;
-  transition: 0.2s;
+  transition: 0.4s;
 }
 #btn-submit:hover {
   background: darkblue;
@@ -143,8 +145,8 @@ textarea {
   background: skyblue;
   position: absolute;
   border-radius: 150px;
-  top: -20;
-  right: -20;
+  top: -20px;
+  right: -20px;
 }
 
 #circle2 {
@@ -153,4 +155,37 @@ textarea {
   border-radius: 150px;
   background: teal;
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 100px;
+}
+
+/* REPONSIVE */
+@media screen and (max-width: 900px) {
+  .grid-container {
+    display: block;
+  }
+  .grid-container img {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .flexbox ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  form {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "i1"
+      "i2"
+      "ta"
+      "bt";
+  }
+  input,
+  textarea {
+    font-size: 0.8rem;
+  }
 }
